tests/baselines/reference/privateNameNotAccessibleOutsideDefiningClass.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(1,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(1,9): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(1,11): error TS2693: 'number' only refers to a type, but is being used as a value here.
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(2,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(4,5): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts (5 errors) ====
        #foo: number = 3;
        ~~~~
!!! error TS1128: Declaration or statement expected.
            ~
!!! error TS1128: Declaration or statement expected.
              ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    new A().#foo = 4;               // Error
        ~
!!! error TS2304: Cannot find name 'A'.
    